--- a/src/css/Testimonal.css
+++ b/src/css/Testimonal.css
@@ -5,7 +5,7 @@
   width: 1170px;
   height: 368px;
   margin: 10px 10px 50px;
-  background-color: #333333;
+  background-color: #33333377;
   box-shadow: 0 3px 13px 1px rgba(0, 0, 0, 9%);
 }
 
